Add endpoints for multiple file upload / download as uri
